Use new Java 11 static collections